# lilygo-epaper

./: .env.example  CHANGELOG.md  Cargo.toml  README.md  TODO.md  justfile  nootmesh.md
.cargo/: config.toml
crates/epub-reader/: Cargo.toml
crates/epub-reader/src/: error.rs  lib.rs  markdown.rs  txt.rs
crates/epub-reader/src/epub/: mod.rs
crates/nootmesh/: Cargo.toml  README.md
crates/nootmesh/src/: airtime.rs  lib.rs  wire.rs
crates/nootmesh/src/tdma/: engine.rs  mod.rs  slots.rs  sync.rs
crates/t3s3-epaper/: Cargo.toml  README.md
crates/t3s3-epaper/examples/: ble.rs  mesh.rs  wifi_lora_bridge.rs
crates/t5s3-epaper-core/: Cargo.toml
crates/t5s3-epaper-core/examples/: battery.rs  clock.rs  counter.rs  deepsleep.rs  frontlight.rs  gps.rs  grayscale.rs  hello-world.rs  input.rs  lora.rs  lora_recv.rs  lora_send.rs  mesh.rs  rotation.rs  rtc-clock.rs  rtc-probe.rs  screen-repair.rs  sdcard.rs  simple.rs  temperature.rs  touchscreen.rs
crates/t5s3-epaper-core/src/: bq25896.rs  bq27220.rs  bus.rs  display.rs  ed047tc1.rs  gps.rs  graphics.rs  gt911.rs  i2c.rs  input.rs  lib.rs  lora.rs  pca9555.rs  pcf85063.rs  pcf8563.rs  power.rs  sdcard.rs  spi.rs
crates/t5s3-epaper-ui/: Cargo.toml  README.md
crates/t5s3-epaper-ui/src/: chatlog.rs  datetime.rs  geo.rs  io48.rs  keyboard.rs  layout.rs  main.rs  mesh.rs  screen.rs  sd.rs  settings.rs  state.rs  text_field.rs  tls.rs  widgets.rs  wifi.rs
crates/t5s3-epaper-ui/src/pages/: environment.rs  files.rs  gps.rs  home.rs  info.rs  library.rs  lora.rs  mod.rs  music.rs  notes.rs  reader.rs  sleep.rs  weather.rs
crates/t5s3-epaper-ui/src/pages/settings/: mesh.rs  mod.rs  reader.rs  system.rs  wifi.rs
examples/: battery.rs  counter.rs  deepsleep.rs  grayscale.rs  hello-world.rs  input.rs  rotation.rs  rtc-clock.rs  screen-repair.rs  simple.rs  touchscreen.rs  ui.rs  wifi_tx.rs
src/: battery.rs  display.rs  ed047tc1.rs  lib.rs  power.rs  rmt.rs  rtc.rs
src/sx1262/: mod.rs
